fix bug dev88888 2

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+{
+  //dev88888
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Roboto',
     monospace;
