fix bug at branch_20251115_dev

--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  #dev202511
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Roboto',
     monospace;
 }
+ #dev202511-2
